_sass/_musig.scss
/* single song article, with lyrics */
article.song {
    .song-images {
        @extend %column-right;

        figure {
            display: block;
            margin-top: 2 * $spacing-unit;

            img {
                display: block;
                margin: auto;
            }
        }
    }
}

/* album listing on musig page */
.albums {
    .album {
        margin-top: $spacing-unit * 2;
        .album-header {
            margin-left: $spacing-unit;
            .album-name {
                font-weight: bold;
                font-size: 32px;
            }

            .album-cover {
                padding: 20px 20px;
                background-image: url(../img/box-drawn-02.png);
                background-position: 2px center;
                background-repeat: no-repeat;
            }

            .album-year {
                display: block;
                font-weight: bold;
                font-size: 24px;
                font-style: italic;
            }
        }
        .songlist {
            margin-top: $spacing-unit;
            margin-left: 42px;
            width: 100%;
            max-width: 500px;

            li.song {
                border-bottom: 1px solid $grey-color;
                margin-top: $spacing-unit / 2;
                font-size: 20px;
                .song-length {
                    float: right;
                    display: inline-block;
                }

                a {
                    text-decoration: none;
                }
            }
        }
    }
}

